feat(server): add user auth verification route; enhance error handling for forbidden & unauthorized access & token refresh logic
