# server/docs/swagger.yaml
@@ -106,6 +106,8 @@ definitions:
     type: object
   models.UnlikeImageResponse:
     properties:
+      image:
+        type: string
       success:
         type: boolean
     type: object
@@ -189,6 +191,23 @@ paths:
           schema:
             $ref: '#/definitions/utils.ErrorResponse'
       summary: Registers a new user.
+      tags:
+      - auth
+  /auth/verify:
+    get:
+      consumes:
+      - application/json
+      description: Verifies that the user is authenticated.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Verifies user authentication.
       tags:
       - auth
   /dog/random:
